--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation "com.android.support:cardview-v7:26.1.0"
     implementation 'com.squareup.okhttp3:okhttp:3.7.0'
     implementation files('libs/volley.jar')
+    implementation 'com.android.support:design:26.1.0'
 }
