--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.7.0'
     implementation files('libs/volley.jar')
     implementation 'com.android.support:design:26.1.0'
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
