--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
@@ -8,7 +8,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:3.5.3'
     }
 }
 apply plugin: 'com.android.application'
@@ -19,29 +19,40 @@ repositories {
         url 'https://maven.google.com/'
         name 'Google'
     }
+
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion "29.0.2"
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 28
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    implementation "com.android.support:support-v4:26.1.0"
-    implementation "com.android.support:support-v13:26.1.0"
-    implementation "com.android.support:appcompat-v7:26.1.0"
-    implementation "com.android.support:palette-v7:26.1.0"
-    implementation "com.android.support:recyclerview-v7:26.1.0"
-    implementation "com.android.support:cardview-v7:26.1.0"
-    implementation 'com.squareup.okhttp3:okhttp:3.7.0'
-    implementation files('libs/volley.jar')
-    implementation 'com.android.support:design:26.1.0'
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "androidx.legacy:legacy-support-v13:1.0.0"
+    implementation "androidx.appcompat:appcompat:1.1.0"
 
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation "androidx.palette:palette:1.0.0"
+
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "com.google.android.material:material:1.0.0"
+
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation files('libs/volley.jar')
+
+
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+
+    implementation "com.hendraanggrian.material:collapsingtoolbarlayout-subtitle:1.0.0"
 }
